--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: python
 python:
   - "2.7"
-  - "3.4"
-  - "3.5"
+#  - "3.4"
+#  - "3.5"
 services:
   - rabbitmq
   - mongodb
 # install OS-level dependencies
-before_install:
-  - sudo apt-get install -qq linux-headers python-dev
+#before_install:
+#  - sudo apt-get install -qq linux-headers python-dev
 install:
   - python ./launch.py install
   - python ./launch.py db --reset
