--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: python
 
 # use container-based travis-ci infrastructure
-sudo: false
+#sudo: false
 
 # use legacy infrastructure
-#sudo: required
+sudo: required
 
 matrix:
   include:
@@ -29,11 +29,11 @@ services:
   - mongodb
 
 before_script:
-  - rabbitmq-plugins enable rabbitmq_management
-  - service rabbitmq-server restart
-  - rabbitmqadmin declare exchange name=ex_utils type=direct
-  - rabbitmqadmin declare exchange name=ex_managed_worker type=direct
-  - rabbitmqadmin declare exchange name=ex_freerun_worker type=direct
+  - sudo rabbitmq-plugins enable rabbitmq_management
+  - sudo service rabbitmq-server restart
+  - sudo rabbitmqadmin declare exchange name=ex_utils type=direct
+  - sudo rabbitmqadmin declare exchange name=ex_managed_worker type=direct
+  - sudo rabbitmqadmin declare exchange name=ex_freerun_worker type=direct
 
 install:
   - mkdir -p /tmp/logs/synergy-scheduler
