Adding Python 3.5 and enlisting branches 1.18 and 1.19

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,17 @@ matrix:
 # deactivate Travis-CI Python3 VirtualEnv, as it conflicts with the launch.py one
         - deactivate
 
+    - python: "3.5"
+      env: PYTHON_BINARY="python3.5"
+      addons:
+        apt:
+          packages:
+          - python3-setuptools
+          - python3-dev
+      before_install:
+# deactivate Travis-CI Python3 VirtualEnv, as it conflicts with the launch.py one
+        - deactivate
+
 services:
   - rabbitmq
   - mongodb
@@ -47,3 +58,5 @@ script:
 branches:
   only:
     - master
+    - 1.18
+    - 1.19
