Trying to workaround the Travis-ci bugs

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ matrix:
           - python3-setuptools
           - python3-dev
       before_install:
+        - which python3
 # deactivate Travis-CI Python3 VirtualEnv, as it conflicts with the launch.py one
         - deactivate
 
@@ -43,6 +44,7 @@ matrix:
           - python3-setuptools
           - python3-dev
       before_install:
+        - which python3
 # deactivate Travis-CI Python3 VirtualEnv, as it conflicts with the launch.py one
         - deactivate
 
@@ -60,6 +62,7 @@ before_script:
 
 install:
   - sudo mkdir --mode=777 -p /var/log/synergy-scheduler
+  - which python3
   - ${PYTHON_BINARY} launch.py install
   - ${PYTHON_BINARY} launch.py db --reset
 
