--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,7 @@ matrix:
           - python3-dev
       before_install:
         - which python3
+        - python3 --version
 # deactivate Travis-CI Python3 VirtualEnv, as it conflicts with the launch.py one
         - deactivate
 
