--- a/.travis.yml
+++ b/.travis.yml
@@ -49,19 +49,27 @@ matrix:
         - deactivate
 
 services:
-  - rabbitmq
-  - mongodb
+  - docker
 
 before_script:
-  - sudo rabbitmq-plugins enable rabbitmq_management
-  - sudo service rabbitmq-server restart
-  - wget http://127.0.0.1:15672/cli/rabbitmqadmin -O ${TRAVIS_BUILD_DIR}/rabbitmqadmin
-  - python2.7 ${TRAVIS_BUILD_DIR}/rabbitmqadmin declare exchange name=ex_utils type=direct
-  - python2.7 ${TRAVIS_BUILD_DIR}/rabbitmqadmin declare exchange name=ex_managed_worker type=direct
-  - python2.7 ${TRAVIS_BUILD_DIR}/rabbitmqadmin declare exchange name=ex_freerun_worker type=direct
+# mongodb section
+  - docker pull mongo:3.6
+  - sudo mkdir --mode=777 -p /data/db/
+  - docker run -d --name syn-mongo -v /data/db/:/data/db -p 27017:27017 mongo --storageEngine wiredTiger
+
+# rabbit mq section
+  - docker pull rabbitmq:3.7
+  - docker run -d --hostname syn-rabbit --name syn-rabbit -p 5672:5672 rabbitmq:3
+  - docker run -d --hostname syn-rabbit --name syn-rabbit-mgr -p 15672:15672 rabbitmq:3-management
+  - wget http://127.0.0.1:15672/cli/rabbitmqadmin -O /tmp/rabbitmqadmin
+  - python3 /tmp/rabbitmqadmin declare vhost name=/unit_test
+  - python3 /tmp/rabbitmqadmin declare exchange name=ex_utils type=direct
+  - python3 /tmp/rabbitmqadmin declare exchange name=ex_managed_worker type=direct
+  - python3 /tmp/rabbitmqadmin declare exchange name=ex_freerun_worker type=direct
 
 install:
-  - sudo mkdir --mode=777 -p /var/log/synergy-scheduler
+  - mkdir --mode=777 -p /var/log/synergy-scheduler
+  - echo "PATH=${PATH}"
   - which python3
   - python3 --version
   - ${PYTHON_BINARY} launch.py install
