--- a/.travis.yml
+++ b/.travis.yml
@@ -68,7 +68,7 @@ before_script:
   - python3 /tmp/rabbitmqadmin declare exchange name=ex_freerun_worker type=direct
 
 install:
-  - mkdir --mode=777 -p /var/log/synergy-scheduler
+  - sudo mkdir --mode=777 -p /var/log/synergy-scheduler
   - echo "PATH=${PATH}"
   - which python3
   - python3 --version
