--- a/.travis.yml
+++ b/.travis.yml
@@ -53,12 +53,12 @@ services:
 
 before_script:
 # mongodb section
-  - docker pull mongo:3.6
+  - docker pull mongo:3
   - sudo mkdir --mode=777 -p /data/db/
-  - docker run -d --name syn-mongo -v /data/db/:/data/db -p 27017:27017 mongo --storageEngine wiredTiger
+  - docker run -d --name syn-mongo -v /data/db/:/data/db -p 27017:27017 mongo:3 --storageEngine wiredTiger
 
 # rabbit mq section
-  - docker pull rabbitmq:3.7
+  - docker pull rabbitmq:3
   - docker run -d --hostname syn-rabbit --name syn-rabbit -p 5672:5672 rabbitmq:3
   - docker run -d --hostname syn-rabbit --name syn-rabbit-mgr -p 15672:15672 rabbitmq:3-management
   - wget http://127.0.0.1:15672/cli/rabbitmqadmin -O /tmp/rabbitmqadmin
@@ -70,8 +70,6 @@ before_script:
 install:
   - sudo mkdir --mode=777 -p /var/log/synergy-scheduler
   - echo "PATH=${PATH}"
-  - which python3
-  - python3 --version
   - ${PYTHON_BINARY} launch.py install
   - ${PYTHON_BINARY} launch.py db --reset
 
