--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ matrix:
           - python3-setuptools
           - python3-dev
       before_install:
-# deactivate Travis-CI Python3 VirtualEnv, as it conflicts with the launch.py one
+        # deactivate Travis-CI Python3 VirtualEnv, as it conflicts with the launch.py one
         - deactivate
 
     - python: "3.5"
@@ -33,7 +33,7 @@ matrix:
           - python3-dev
       before_install:
         - export PATH="$PYENV_ROOT/bin:$PATH"
-# deactivate Travis-CI Python3 VirtualEnv, as it conflicts with the launch.py one
+        # deactivate Travis-CI Python3 VirtualEnv, as it conflicts with the launch.py one
         - deactivate
 
     - python: "3.6"
@@ -45,19 +45,18 @@ matrix:
           - python3-dev
       before_install:
         - export PATH="$PYENV_ROOT/bin:$PATH"
-# deactivate Travis-CI Python3 VirtualEnv, as it conflicts with the launch.py one
+        # deactivate Travis-CI Python3 VirtualEnv, as it conflicts with the launch.py one
         - deactivate
 
 services:
   - docker
 
-before_script:
-# mongodb section
+before_install:
+  # mongodb section
   - docker pull mongo:3
   - sudo mkdir --mode=777 -p /data/db/
   - docker run -d --name syn-mongo -v /data/db/:/data/db -p 27017:27017 mongo:3 --storageEngine wiredTiger
-
-# rabbit mq section
+  # rabbit mq section
   - docker pull rabbitmq:3
   - docker run -d --hostname syn-rabbit --name syn-rabbit -p 5672:5672 rabbitmq:3
   - docker run -d --hostname syn-rabbit --name syn-rabbit-mgr -p 15672:15672 rabbitmq:3-management
@@ -68,10 +67,12 @@ before_script:
   - python3 /tmp/rabbitmqadmin declare exchange name=ex_freerun_worker type=direct
 
 install:
-  - sudo mkdir --mode=777 -p /var/log/synergy-scheduler
   - echo "PATH=${PATH}"
+  - sudo mkdir --mode=777 -p /var/log/synergy-scheduler
   - ${PYTHON_BINARY} launch.py install
-  - ${PYTHON_BINARY} launch.py db --reset
+
+before_script:
+  - python3 launch.py db --reset
 
 script:
   - ${PYTHON_BINARY} launch.py test
