--- a/.travis.yml
+++ b/.travis.yml
@@ -61,10 +61,13 @@ before_install:
   - docker run -d --hostname syn-rabbit --name syn-rabbit -p 5672:5672 rabbitmq:3
   - docker run -d --hostname syn-rabbit --name syn-rabbit-mgr -p 15672:15672 rabbitmq:3-management
   - wget http://127.0.0.1:15672/cli/rabbitmqadmin -O /tmp/rabbitmqadmin
-  - python3 /tmp/rabbitmqadmin declare vhost name=/unit_test
   - python3 /tmp/rabbitmqadmin declare exchange name=ex_utils type=direct
   - python3 /tmp/rabbitmqadmin declare exchange name=ex_managed_worker type=direct
   - python3 /tmp/rabbitmqadmin declare exchange name=ex_freerun_worker type=direct
+  - python3 /tmp/rabbitmqadmin declare vhost name=unit_test
+  - python3 /tmp/rabbitmqadmin declare exchange --vhost=unit_test name=ex_utils type=direct
+  - python3 /tmp/rabbitmqadmin declare exchange --vhost=unit_test name=ex_managed_worker type=direct
+  - python3 /tmp/rabbitmqadmin declare exchange --vhost=unit_test name=ex_freerun_worker type=direct
 
 install:
   - echo "PATH=${PATH}"
