--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,8 @@ matrix:
       addons:
         apt:
           packages:
+          # Travis-ci has a known issue with Python3.5 and 3.6
+          - python3.5
           - python3-setuptools
           - python3-dev
 
@@ -34,6 +36,8 @@ matrix:
       addons:
         apt:
           packages:
+          # Travis-ci has a known issue with Python3.5 and 3.6
+          - python3.6
           - python3-setuptools
           - python3-dev
 
