--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ matrix:
         apt:
           packages:
           # Travis-ci has a known issue with Python3.5 and 3.6
-          - python3.5
+          - python3=3.5*
           - python3-setuptools
           - python3-dev
 
@@ -37,7 +37,7 @@ matrix:
         apt:
           packages:
           # Travis-ci has a known issue with Python3.5 and 3.6
-          - python3.6
+          - python3=3.6*
           - python3-setuptools
           - python3-dev
 
