--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,12 @@ matrix:
       env: PYTHON_BINARY="python3.5"
       addons:
         apt:
+          sources:
+          # apt source hosting Python3.5 and 3.6
+          - deadsnakes
           packages:
           # Travis-ci has a known issue with Python3.5 and 3.6
-          - python3=3.5*
+          - python3.5
           - python3-setuptools
           - python3-dev
 
@@ -35,9 +38,12 @@ matrix:
       env: PYTHON_BINARY="python3.6"
       addons:
         apt:
+          sources:
+          # apt source hosting Python3.5 and 3.6
+          - deadsnakes
           packages:
           # Travis-ci has a known issue with Python3.5 and 3.6
-          - python3=3.6*
+          - python3.6
           - python3-setuptools
           - python3-dev
 
