--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ sudo: required
 addons:
   hosts:
     # hostnames will be enlisted in /etc/hosts and resolved to 127.0.0.1
-    - syn-rabbit
+    - syn-rabbitmq
     - syn-mongo
 
 matrix:
@@ -63,27 +63,17 @@ before_install:
 install:
   # mongodb section
   - docker pull mongo:3
-  - sudo mkdir --mode=777 -p /data/db/
-  - docker run -d --name syn-mongo -v /data/db/:/data/db -p 27017:27017 mongo:3 --storageEngine wiredTiger
+  - docker run -d --name syn-mongo -p 27017:27017 mongo:3
 
   # rabbit mq section
   - docker pull rabbitmq:3
-  - docker run -d --hostname syn-rabbit --name syn-rabbit -p 5672:5672 rabbitmq:3
-  - docker run -d --hostname syn-rabbit --name syn-rabbit-mgr -p 15672:15672 rabbitmq:3-management
-  - wget http://127.0.0.1:15672/cli/rabbitmqadmin -O /tmp/rabbitmqadmin
-  - python3 /tmp/rabbitmqadmin declare exchange name=ex_utils type=direct
-  - python3 /tmp/rabbitmqadmin declare exchange name=ex_managed_worker type=direct
-  - python3 /tmp/rabbitmqadmin declare exchange name=ex_freerun_worker type=direct
-  - python3 /tmp/rabbitmqadmin declare vhost name=unit_test
-  - python3 /tmp/rabbitmqadmin declare exchange --vhost=unit_test name=ex_utils type=direct
-  - python3 /tmp/rabbitmqadmin declare exchange --vhost=unit_test name=ex_managed_worker type=direct
-  - python3 /tmp/rabbitmqadmin declare exchange --vhost=unit_test name=ex_freerun_worker type=direct
+  - docker run -d --hostname syn-rabbitmq --name syn-rabbitmq -p 5672:5672 -p 15672:15672 rabbitmq:3-management
+  - scripts/rabbitmq_config.sh
 
 before_script:
-  - echo "PATH=${PATH}"
   - sudo mkdir --mode=777 -p /var/log/synergy-scheduler
   - ${PYTHON_BINARY} launch.py install
-  - python3 launch.py db --reset
+  - ${PYTHON_BINARY} launch.py db --reset
 
 script:
   - ${PYTHON_BINARY} launch.py test
