--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+dist: xenial    # required for Python >= 3.7
 language: python
 
 # use container-based travis-ci infrastructure
@@ -18,8 +19,8 @@ matrix:
       before_install:
         - pip install virtualenv
 
-    - python: "3.4"
-      env: PYTHON_BINARY="python3.4"
+    - python: "3.6-dev"
+      env: PYTHON_BINARY="python3.6"
       addons:
         hosts:
           # hostnames will be enlisted in /etc/hosts and resolved to 127.0.0.1
@@ -28,33 +29,18 @@ matrix:
         apt:
           packages:
           - python3-setuptools
-          - python3-dev
 
-#    - python: "3.5"
-#      env: PYTHON_BINARY="python3.5"
-#      addons:
-#        apt:
-#          sources:
-#          # apt source hosting Python3.5 and 3.6
-#          - deadsnakes
-#          packages:
-#          # Travis-ci has a known issue with Python3.5 and 3.6
-#          - python3.5
-#          - python3-setuptools
-#          - python3-dev
-#
-#    - python: "3.6"
-#      env: PYTHON_BINARY="python3.6"
-#      addons:
-#        apt:
-#          sources:
-#          # apt source hosting Python3.5 and 3.6
-#          - deadsnakes
-#          packages:
-#          # Travis-ci has a known issue with Python3.5 and 3.6
-#          - python3.6
-#          - python3-setuptools
-#          - python3-dev
+    - python: "3.7-dev"
+      env: PYTHON_BINARY="python3.6"
+      addons:
+        hosts:
+          # hostnames will be enlisted in /etc/hosts and resolved to 127.0.0.1
+          - syn-rabbitmq
+          - syn-mongodb
+        apt:
+          packages:
+          - python3-setuptools
+
 
 services:
   - docker
@@ -84,5 +70,5 @@ script:
 branches:
   only:
     - master
-    - 2.0
     - 2.1
+    - 2.2
