--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,23 +1,16 @@
 #  Bitbucket Pipeline definition for Scheduler
-image: python:3.7.4
+image: python:3.7.3
 
 definitions:
   services:
     mongodb:
       image: mongo:3
-      name: syn-mongodb
-      hostname: syn-mongodb
 
     rabbitmq:
       image: rabbitmq:3
-      hostname: syn-rabbitmq
-      name: syn-rabbitmq
       environment:
         RABBITMQ_DEFAULT_USER: guest
         RABBITMQ_DEFAULT_PASS: guest
-      ports:
-        - 5672:5672
-        - 15672:15672
 
 pipelines:
   default:
@@ -25,8 +18,8 @@ pipelines:
           name: Installation
           script:
             - pip install python3-setuptools
-#            - echo "127.0.0.1 syn-rabbitmq" &gt;&gt; /etc/hosts
-#            - echo "127.0.0.1 syn-mongodb" &gt;&gt; /etc/hosts
+            - echo "127.0.0.1 syn-rabbitmq" &gt;&gt; /etc/hosts
+            - echo "127.0.0.1 syn-mongodb" &gt;&gt; /etc/hosts
             - scripts/rabbitmq_config.sh
             - mkdir --mode=777 -p /var/log/synergy-scheduler
             - python launch.py install
