--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -21,7 +21,7 @@ pipelines:
 #            - echo "127.0.0.1 syn-rabbitmq" >> /etc/hosts
 #            - echo "127.0.0.1 syn-mongodb" >> /etc/hosts
             - cat /etc/hosts
-            - set RABBITMQ_HOST=localhost; scripts/rabbitmq_config.sh
+            - RABBITMQ_HOST=localhost scripts/rabbitmq_config.sh
             - mkdir --mode=777 -p /var/log/synergy-scheduler
             - python launch.py install
             - python launch.py db --reset
