--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,20 @@ matrix:
           - python3.7-venv
           - python3-setuptools
 
+    - python: "3.8"
+      env: PYTHON_BINARY="python3.8"
+      addons:
+        hosts:
+          # hostnames will be enlisted in /etc/hosts and resolved to 127.0.0.1
+          - syn-rabbitmq
+          - syn-mongodb
+        apt:
+          packages:
+          - python3.8
+          - python3.8-dev
+          - python3.8-venv
+          - python3-setuptools
+
 services:
   - docker
 
@@ -46,6 +60,6 @@ script:
 
 branches:
   only:
-    - master
-    - 2.3
-    - 2.4
+    - "master"
+    - "2.4"
+    - "2.5"
